@@ -1806,24 +1806,23 @@ dnl If the cache file is inconsistent with the current host,
 dnl target and build system types, execute CMD or print a default
 dnl error message.
 AC_DEFUN(AC_VALIDATE_CACHED_SYSTEM_TUPLE,
-[
-  AC_REQUIRE([AC_CANONICAL_SYSTEM])dnl
-  AC_MSG_CHECKING([cached system tuple])
-  if { test x"${ac_cv_host_system_type+set}" = x"set" &&
-       test x"$ac_cv_host_system_type" != x"$host"; } ||
-     { test x"${ac_cv_build_system_type+set}" = x"set" &&
-       test x"$ac_cv_build_system_type" != x"$build"; } ||
-     { test x"${ac_cv_target_system_type+set}" = x"set" &&
-       test x"$ac_cv_target_system_type" != x"$target"; }; then
-      AC_MSG_RESULT([different])
-      ifelse($#, 1, [$1],
-        [AC_MSG_ERROR([remove config.cache and re-run configure])])
-  else
-    AC_MSG_RESULT(ok)
-  fi
-  ac_cv_host_system_type="$host"
-  ac_cv_build_system_type="$build"
-  ac_cv_target_system_type="$target"
+[AC_REQUIRE([AC_CANONICAL_SYSTEM])dnl
+AC_MSG_CHECKING([cached system tuple])
+if { test x"${ac_cv_host_system_type+set}" = x"set" &&
+     test x"$ac_cv_host_system_type" != x"$host"; } ||
+   { test x"${ac_cv_build_system_type+set}" = x"set" &&
+     test x"$ac_cv_build_system_type" != x"$build"; } ||
+   { test x"${ac_cv_target_system_type+set}" = x"set" &&
+     test x"$ac_cv_target_system_type" != x"$target"; }; then
+    AC_MSG_RESULT([different])
+    m4_default([$1],
+               [AC_MSG_ERROR([remove config.cache and re-run configure])])
+else
+  AC_MSG_RESULT(ok)
+fi
+ac_cv_host_system_type="$host"
+ac_cv_build_system_type="$build"
+ac_cv_target_system_type="$target"dnl
 ])
 
 
@@ -1866,7 +1865,8 @@ fi
 ])
 
 
-dnl AC_CACHE_SAVE()
+dnl AC_CACHE_SAVE
+dnl -------------
 define(AC_CACHE_SAVE,
 [cat >confcache <<\EOF
 # This file is a shell script that caches the results of configure
@@ -1906,9 +1906,7 @@ changequote(, )dnl
     ;;
   esac >>confcache
 changequote([, ])dnl
-if cmp -s $cache_file confcache; then
-  :
-else
+if cmp -s $cache_file confcache; then :; else
   if test -w $cache_file; then
     echo "updating cache $cache_file"
     cat confcache >$cache_file
